[project]
name = "wander-maps"
version = "0.1.0"
description = ""
authors = [
    {name = "apukropski"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium (>=0.19.5,<0.20.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
[tool.ruff.format]
docstring-code-format = true
